--- a/style/global.css
+++ b/style/global.css
@@ -1157,22 +1157,20 @@ span.title-empty {
 	cursor: move;
 }
 
-.sprite {display: block; background: transparent url('../images/favicons.png?1') no-repeat; text-indent: -10000px; }
+.sprite {display: block; background: transparent url('../images/favicons.png?2') no-repeat; text-indent: -10000px; }
 .gfxtw { background-position: 0 0; width: 16px; height: 16px}
-.wordpress-com { background-position: -18px 0; width: 16px; height: 16px}
-.facebook { background-position: -36px 0; width: 16px; height: 16px}
-.pixnet { background-position: -54px 0; width: 16px; height: 16px}
-.twitter { background-position: -72px 0; width: 16px; height: 16px}
-.openid { background-position: -90px 0; width: 16px; height: 16px}
-.anobii { background-position: 0 -18px; width: 16px; height: 16px}
-.netvibes { background-position: -18px -18px; width: 16px; height: 16px}
-.plurk { background-position: -36px -18px; width: 16px; height: 16px}
-.google { background-position: -54px -18px; width: 16px; height: 16px}
-.yahoo { background-position: -72px -18px; width: 16px; height: 16px}
-.myidtw { background-position: -90px -18px; width: 16px; height: 16px}
-.aim { background-position: 0 -36px; width: 16px; height: 16px}
-.livejournal { background-position: -18px -36px; width: 16px; height: 16px}
-.myopenid { background-position: -36px -36px; width: 16px; height: 16px}
-.typepad { background-position: -54px -36px; width: 16px; height: 16px}
-.wikipedia { background-position: -72px -36px; width: 16px; height: 16px}
+.google { background-position: -20px 0; width: 16px; height: 16px}
+.yahoo { background-position: -40px 0; width: 16px; height: 16px}
+.openid { background-position: -60px 0; width: 16px; height: 16px}
+.pixnet { background-position: 0 -20px; width: 16px; height: 16px}
+.wordpress-com { background-position: -20px -20px; width: 16px; height: 16px}
+.myidtw { background-position: -40px -20px; width: 16px; height: 16px}
+.aim { background-position: -60px -20px; width: 16px; height: 16px}
+.livejournal { background-position: 0 -40px; width: 16px; height: 16px}
+.myopenid { background-position: -20px -40px; width: 16px; height: 16px}
+.typepad { background-position: -40px -40px; width: 16px; height: 16px}
+.twitter { background-position: -60px -40px; width: 16px; height: 16px}
+.plurk { background-position: 0 -60px; width: 16px; height: 16px}
+.facebook { background-position: -20px -60px; width: 16px; height: 16px}
+.funp { background-position: -40px -60px; width: 16px; height: 16px}
 
