zh-tw XP font tweak

--- a/style/global.css
+++ b/style/global.css
@@ -695,6 +695,7 @@ span.title-empty {
 	margin: 0; padding: 0;
 	top: 100px; left: 40px;
 	width: 230px; height: 125px;
+	text-align: justify;
 }
 
 
