--- a/style/language-zh-TW.css
+++ b/style/language-zh-TW.css
@@ -3,7 +3,8 @@
 body,
 input, select, textarea, button, option, optgroup,
 .ui-widget,
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button,
+#visitor-intro, .random-avatars, .message-link {
 	font-family: 
 		'Arial', 'Verdana','Segoe UI',
 /*		'微軟正黑體', 'Microsoft JhengHei', */
