--- a/style/global.css
+++ b/style/global.css
@@ -1185,8 +1185,8 @@ span.title-empty {
 }
 
 #openid_message {
-	padding: 300px 100px 0;
-	background: transparent url('../images/openid-icon-250x250.png') center 30px no-repeat;
+	padding: 250px 200px 0;
+	background: transparent url('../images/ajax-progress.gif') center center no-repeat;
 	text-align: right;
 }
 
