--- a/style/global.css
+++ b/style/global.css
@@ -451,6 +451,7 @@ span.title-empty {
         height: 72px; width: 72px;
         overflow: hidden; 
 	cursor: pointer;
+	text-align: center;
 }
 
 #titleblock #title-avatar {
