--- a/style/global.css
+++ b/style/global.css
@@ -857,7 +857,8 @@ span.title-empty {
 	background-color: #ffffcc;
 }
 
-#groups-show-detail {
+#groups-show-detail,
+#show-all-addons {
 	float: right;
 	margin: 0.2em 1em;
 }
@@ -933,6 +934,10 @@ span.title-empty {
 	color: #999999;
 }
 
+#groups.no-groups .group .group-title {
+	display: none;
+}
+
 #groups .group .group-title {
 	padding: 3px;
 }
@@ -952,17 +957,16 @@ span.title-empty {
 	margin: 0; padding: 0;
 }
 
-#groups .group p.group-add-addon {
+#groups-title p.group-add-addon {
 	float: right; 
-	margin: 1px;
-	font-size: 0.82em;
+	margin: 0.5em 1.5em 0;
 }
-#groups .group p.group-add-addon a {
+#groups-title p.group-add-addon a {
 	color: #000000;
 	text-decoration: none;
 }
 
-#groups .group p.group-add-addon span.ui-icon {
+#groups-title p.group-add-addon span.ui-icon {
 	float: left;
 }
 
@@ -1011,6 +1015,35 @@ span.title-empty {
 	-o-border-radius: 6px;
 	border-radius: 6px;
 }
+
+#groups.no-groups .addon {
+	display: none;
+}
+
+#groups.show-all .addon,
+#groups.no-groups .top-3 {
+	display: block!important;
+}
+#groups.no-groups .top-3,
+#groups.no-groups .addon:nth-child(1), /* editor */
+#groups.no-groups .addon:nth-child(2),
+#groups.no-groups .addon:nth-child(3) {
+	background: #fff url('../images/star-icon.gif') right 22px no-repeat;
+}
+/*
+#groups.no-groups .addon span {
+	color: #666;
+}
+#groups.no-groups .top-3 span {
+	color: #000!important;
+}
+*/
+/*
+#groups.no-groups .rank-4 {
+	margin-top: 16px;
+}
+*/
+
 .addon {
 	margin: 1px 0;
 	padding: 8px 0;
@@ -1099,6 +1132,7 @@ span.title-empty {
 .detailed .addon .desc {
 	display: block;
 	padding-left: 52px;
+	padding-right: 20px;
 	line-height: 125%;
 }
 
